<resources>
    <string name="app_name">Yelp Assignment</string>
    <string name="name">Name</string>
    <string name="action_settings">Test</string>
    <string name="first_fragment_label">First</string>
    <string name="second_fragment_label">Second</string>
    <string name="business_icon">Business icon</string>
    <string name="address">Address</string>
    <string name="rating">Rating</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="type_name_or_cuisine_type">Type name or cuisine type</string>
    <string name="type_location">Type location</string>
    <string name="search">Search</string>
</resources>