<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="business" type="com.example.myapplication.Business" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:baselineAligned="false"
                        android:orientation="vertical"
                        android:visibility="visible"
                        tools:visibility="visible">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView31"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="3dp"
                                android:text="@string/name" />

                            <TextView
                                android:id="@+id/textView23"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:padding="3dp"
                                android:text="@{business.name}"/>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView25"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="3dp"
                                android:text="@string/address" />

                            <TextView
                                android:id="@+id/textView24"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:padding="3dp"
                                android:text="@{business.address}" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView26"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="3dp"
                                android:text="@string/rating" />

                            <TextView
                                android:id="@+id/textView28"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:padding="3dp"
                                android:text="@{business.rate}" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:contentDescription="@string/business_icon" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>